updated bootstrap image to use podman and buildah
removed dependency on docker daemon

--- a/bootstrap/Makefile
+++ b/bootstrap/Makefile
@@ -5,11 +5,13 @@ DOCKERFILE?=Dockerfile
 DOCKER_LABEL?=localhost/demo-ansible:latest
 CONTAINER_NAME?=demo-ansible
 
+DOCKER_FLAG:=.docker-build
+
 MOTD=files/etc/motd
 
 all: build
 
-TEST_NEEDS_SUDO:=$(shell docker ps > /dev/null 2>&1 && echo no || echo yes)
+TEST_NEEDS_SUDO:=$(shell podman ps > /dev/null 2>&1 && echo no || echo yes)
 
 ifeq ($(TEST_NEEDS_SUDO),yes)
 SUDO:=sudo
@@ -17,8 +19,11 @@ else
 SUDO:=
 endif
 
-build: $(DOCKERFILE)
-	$(SUDO) docker build -t $(DOCKER_LABEL) -f $(DOCKERFILE) .
+build: $(DOCKERFILE) $(DOCKER_FLAG)
+
+$(DOCKER_FLAG):
+	$(SUDO) buildah bud -t $(DOCKER_LABEL) -f $(DOCKERFILE) .
+	touch $@
 
 GID=$(shell id -g)
 UID=$(shell id -u)
@@ -41,7 +46,7 @@ run: $(DOCKERFILE)
 	err() { echo "$$@" >&2; exit 1; }
 	V="-v $(MAKEFILE_DIR)/..:/tmp/install:Z"
 	test -r $(MAKEFILE_DIR)/aws && cp $(MAKEFILE_DIR)/aws $$T && V+=" -v $$T/aws:/etc/profile.d/aws.sh:Z"
-	D_HOME=`$(SUDO) docker run --rm -i $(DOCKER_LABEL) /bin/sh -c 'echo $$HOME'`
-	test -z "$$D_HOME" && err 'Unable to determine docker container HOME directory'
+	D_HOME=`$(SUDO) podman run --rm -i $(DOCKER_LABEL) /bin/sh -c 'echo $$HOME'`
+	test -z "$$D_HOME" && err 'Unable to determine podman container HOME directory'
 	V+=" -v $$T/.ssh:$$D_HOME/.ssh:Z"
-	$(SUDO) docker run --name=$(CONTAINER_NAME) --rm -it $$V $(DOCKER_LABEL)
+	$(SUDO) podman run --name=$(CONTAINER_NAME) --rm -it $$V $(DOCKER_LABEL)
