--- a/bootstrap/Dockerfile.template
+++ b/bootstrap/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM fedora:28
+FROM docker.io/fedora:28
 MAINTAINER Billy Holmes <billy@gonoph.net>
 
 ENV	PS1='\[\033[01;30m\](\[\033[01;32m\]container\[\033[01;30m\])\[\033[0m\] [\u@\h \[\033[01;34m\]\W\[\033[0m\]]$ ' \
