--- a/playbooks/roles/satellite-post/tasks/configure_compute_resources_ec2.yml
+++ b/playbooks/roles/satellite-post/tasks/configure_compute_resources_ec2.yml
@@ -102,7 +102,7 @@
         availability_zone: "{{ ec2_availability_zone }}"
         flavor_id: t2.small
         image_id: "{{ ec2_ami_image }}"
-        managed_ip: public
+        managed_ip: private
         security_group_ids:
         - "{{ ec2_sg_id }}"
         subnet_id: "{{ ec2_vpc_subnet }}"
